[package]
name = "tinyroute-websockets"
version = "0.1.0"
edition = "2021"

[features]
default = ["tokio-rt"]
tokio-rt = ["tinyroute/tokio-rt", "async-tungstenite/tokio-runtime", "tokio"]
async-std-rt = ["tinyroute/async-std-rt", "async-tungstenite/async-std-runtime", "async-std"]
smol-rt = ["tinyroute/smol-rt", "smol"]

[dependencies]
async-std = { version = "1.10.0", optional = true }
async-tungstenite = "0.16.0"
futures = "0.3.17"
log = "0.4.14"
smol = { version = "1.2.5", optional = true }
thiserror = "1.0.30"
tinyroute = { path = "../tinyroute" }   
tokio = { version = "1.13.0", features = ["full"], optional = true }
tungstenite = "0.16.0"
